--- a/po/stellarium-skycultures/de.po
+++ b/po/stellarium-skycultures/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-30 10:56+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-02 16:21+0000\n"
+"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-31 04:37+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-03 04:46+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -33,7 +33,7 @@ msgstr "Barnards Galaxie"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Bärenpfoten-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -61,7 +61,7 @@ msgstr "Bodes Galaxie"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Zigarrengalaxie"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -193,7 +193,7 @@ msgstr "Sanduhrnebel"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Hubbles Veränderlicher Nebel"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -372,7 +372,7 @@ msgstr "λ Cen-Nebel"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "ω Cen Haufen"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -384,19 +384,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "Katzenpfoten-Nebel"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "Krieg und Frieden-Nebel"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "Kleiner Geisternebel"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
-msgstr ""
+msgstr "Kleiner Edelstein-Nebel"
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
@@ -412,7 +412,7 @@ msgstr "Fornax B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "de Mairans Nebel"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
@@ -428,15 +428,15 @@ msgstr "Thors Helm"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "Carolines Haufen"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "τ Canis Majoris Haufen"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "Bleistift-Nebel"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
@@ -448,15 +448,15 @@ msgstr "Galaxienhaufen"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "Südliche Feuerrad-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "Feuerrad-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
-msgstr ""
+msgstr "Atome für den Frieden -Galaxie"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
@@ -464,23 +464,23 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
-msgstr ""
+msgstr "Affenkopfnebel"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
-msgstr ""
+msgstr "Zitronenscheiben-Nebel"
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "Rote-Spinne-Nebel"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
-msgstr ""
+msgstr "Retina-Nebel"
 
 #: nebulae/default/ngc2000names.dat:250
 msgid "Spirograph nebula"
-msgstr ""
+msgstr "Spirographen-Nebel"
 
 #: nebulae/default/ngc2000names.dat:251
 msgid "Spiral planetary nebula"
@@ -488,27 +488,27 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "20 Vulpeculae Haufen"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
-msgstr ""
+msgstr "Ambartsumians Knoten"
 
 #: nebulae/default/ngc2000names.dat:254
 msgid "Antares nebula"
-msgstr ""
+msgstr "Antares-Nebel"
 
 #: nebulae/default/ngc2000names.dat:255
 msgid "Auriga Salt-and-Pepper"
-msgstr ""
+msgstr "Auriga Salz und Pfeffer"
 
 #: nebulae/default/ngc2000names.dat:256
 msgid "Baxendall's nebula"
-msgstr ""
+msgstr "Baxendalls Nebel"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cassiopeia Salt-and-Pepper"
-msgstr ""
+msgstr "Cassiopeia Salz und Pfeffer"
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
@@ -516,11 +516,11 @@ msgstr "Cetus A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
-msgstr ""
+msgstr "Kleopatras Auge"
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Cooling Tower"
-msgstr ""
+msgstr "Kühlturm"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Crowbar galaxy"
@@ -528,19 +528,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Sagittarius Star Cloud"
-msgstr ""
+msgstr "Sagittarius Sternwolke"
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Dragon nebula"
-msgstr ""
+msgstr "Drachennebel"
 
 #: nebulae/default/ngc2000names.dat:264
 msgid "Dragonfly cluster"
-msgstr ""
+msgstr "Libellen-Haufen"
 
 #: nebulae/default/ngc2000names.dat:265
 msgid "Elephant Trunk"
-msgstr ""
+msgstr "Elephantenrüssel"
 
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
@@ -549,19 +549,19 @@ msgstr "Grus-Quartett"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
-msgstr ""
+msgstr "Herz-Nebel"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "Herzförmiger Haufen"
 
 #: nebulae/default/ngc2000names.dat:272
 msgid "Herring galaxy"
-msgstr ""
+msgstr "Heringsgalaxie"
 
 #: nebulae/default/ngc2000names.dat:273
 msgid "Hole in a cluster"
-msgstr ""
+msgstr "Loch im Haufen"
 
 #: nebulae/default/ngc2000names.dat:274
 msgid "Intergalactic Wanderer/Tramp"
@@ -578,11 +578,11 @@ msgstr ""
 #: nebulae/default/ngc2000names.dat:278 nebulae/default/ngc2000names.dat:279
 #: nebulae/default/ngc2000names.dat:280
 msgid "Leo Triplet"
-msgstr ""
+msgstr "Leo Triplett"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "McLeish's Object"
-msgstr ""
+msgstr "McLeishs Objekt"
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
@@ -590,15 +590,15 @@ msgstr "Miniatur-Spirale"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Mirach's Ghost"
-msgstr ""
+msgstr "Mirachs Geist"
 
 #: nebulae/default/ngc2000names.dat:284
 msgid "Sailboat cluster"
-msgstr ""
+msgstr "Segelboot-Haufen"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Seyfert's Sextet"
-msgstr ""
+msgstr "Seyferts Sextett"
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Soul nebula"
@@ -606,15 +606,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Southern Integral Sign"
-msgstr ""
+msgstr "Südliches Integralzeichen"
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Starfish cluster"
-msgstr ""
+msgstr "Seestern-Haufen"
 
 #: nebulae/default/ngc2000names.dat:289
 msgid "Superwind-Galaxy"
-msgstr ""
+msgstr "Superwind-Galaxie"
 
 #: nebulae/default/ngc2000names.dat:290
 msgid "Turtle planetary nebula"
