--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-31 18:38+0000\n"
+"PO-Revision-Date: 2013-01-02 05:29+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-01 04:44+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-03 04:46+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -530,7 +530,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Sagittarius Star Cloud"
-msgstr ""
+msgstr "Nube Estelar de Sagitario"
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Dragon nebula"
