--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-11-15 21:46+0000\n"
-"Last-Translator: Dennis Baudys <Unknown>\n"
+"PO-Revision-Date: 2013-01-02 16:36+0000\n"
+"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:40+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-03 04:46+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1482,6 +1482,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Phobos-Bedeckungen der Erde sind häufig, ebenso Bedeckungen des Jupiter. "
+"Aber Bedeckungen beider am selben Tag sind selten. Hier ist eine solche vom "
+"23.1.2048. In Echtzeit."
 
 #: src/translations.h:243
 msgid ""
@@ -1524,6 +1527,8 @@ msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Eine Darstellung des Analemmas - der jährlichen Bahn der Sonne über den "
+"Himmel."
 
 #: src/translations.h:250
 msgid ""
@@ -2561,7 +2566,7 @@ msgstr "1 Mittleres Tropisches Jahr vorwärts"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "1 mittleres Tropisches Jahrhundert vor"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2673,7 +2678,7 @@ msgstr "1 Mittleres Tropisches Jahr zurück"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "1 mittleres Tropisches Jahrhundert zurück"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
@@ -6650,15 +6655,15 @@ msgstr "Exoplaneten-Daten aus dem Internet aktualisieren"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "Anzeigemodus für Exoplaneten"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "Zeige alle Exoplanetensysteme ohne Beschriftung"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "Zeige Verteilung der Exoplaneten"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
