--- a/po/stellarium-skycultures/gd.po
+++ b/po/stellarium-skycultures/gd.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-02-15 15:39+0000\n"
+"PO-Revision-Date: 2013-02-16 05:57+0000\n"
 "Last-Translator: GunChleoc <Unknown>\n"
 "Language-Team: Fòram na Gàidhlig http://www.foramnagaidhlig.net\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-16 04:34+0000\n"
+"X-Launchpad-Export-Date: 2013-02-17 04:35+0000\n"
 "X-Generator: Launchpad (build 16491)\n"
 "Language: gd\n"
 
@@ -24,23 +24,23 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:113 nebulae/default/ngc2000names.dat:114
 msgid "Antennae"
-msgstr ""
+msgstr "Na h-Iadhairean"
 
 #: nebulae/default/ngc2000names.dat:115
 msgid "Barnard's galaxy"
-msgstr ""
+msgstr "Reul-chrios Bharnard"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Reul-chrios Spòg a' Mhathain"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
-msgstr ""
+msgstr "Grioglachan na Sgip"
 
 #: nebulae/default/ngc2000names.dat:118
 msgid "Black-eye galaxy"
-msgstr ""
+msgstr "Reul-chrios na Sùla Duibhe"
 
 #: nebulae/default/ngc2000names.dat:119
 msgid "Blinking planetary"
@@ -60,7 +60,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Reul-chrios an t-Siogair"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -164,7 +164,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Reul-chrios Andromeda"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -172,7 +172,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:161
 msgid "Helix galaxy"
-msgstr ""
+msgstr "Reul-chrois hèileigs"
 
 #: nebulae/default/ngc2000names.dat:162
 msgid "Helix nebula"
@@ -285,7 +285,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:194
 msgid "Sculptor galaxy"
-msgstr ""
+msgstr "Reul-chrios an Deilbheir"
 
 #: nebulae/default/ngc2000names.dat:195 nebulae/default/ngc2000names.dat:196
 msgid "Siamese Twins"
@@ -293,7 +293,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:197
 msgid "Sombrero galaxy"
-msgstr ""
+msgstr "Reul-chrios Sombrero"
 
 #: nebulae/default/ngc2000names.dat:198
 msgid "Southern Pleiades"
@@ -301,7 +301,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:199
 msgid "Spindle galaxy"
-msgstr ""
+msgstr "Reul-chrios an Dealgain"
 
 #: nebulae/default/ngc2000names.dat:200
 msgid "Star Queen nebula"
@@ -318,7 +318,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:206
 msgid "Sunflower galaxy"
-msgstr ""
+msgstr "Reul-chrois an Neòinein-ghrèine"
 
 #: nebulae/default/ngc2000names.dat:207
 msgid "Tarantula nebula"
@@ -330,7 +330,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:209
 msgid "Triangulum galaxy"
-msgstr ""
+msgstr "Reul-chrios an Triantain"
 
 #: nebulae/default/ngc2000names.dat:210
 msgid "Trifid nebula"
@@ -343,7 +343,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:214
 msgid "Whirlpool galaxy"
-msgstr ""
+msgstr "Reul-chrios cuairt-shrutha"
 
 #: nebulae/default/ngc2000names.dat:215
 msgid "Wild Duck cluster"
@@ -443,15 +443,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Grioglachan dhe reul-chriosan"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "Reul-chrios a' Ghille-mhirein a Deas"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "Reul-chrios a' Ghille-mhirein"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
@@ -613,27 +613,27 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
-msgstr ""
+msgstr "Am Boireannach Geimhlichte"
 
 #: skycultures/arabic/constellation_names.eng.fab:2
 msgid "The Well-bucket"
-msgstr ""
+msgstr "Cuinneag an Tobair"
 
 #: skycultures/arabic/constellation_names.eng.fab:3
 msgid "The Eagle"
-msgstr ""
+msgstr "An Iolaire"
 
 #: skycultures/arabic/constellation_names.eng.fab:4
 msgid "The Censer"
-msgstr ""
+msgstr "An Tùisear"
 
 #: skycultures/arabic/constellation_names.eng.fab:5
 msgid "The Ram"
-msgstr ""
+msgstr "An Reithe"
 
 #: skycultures/arabic/constellation_names.eng.fab:6
 msgid "The Reins-holder"
-msgstr ""
+msgstr "Giùlanair nan Srian"
 
 #: skycultures/arabic/constellation_names.eng.fab:7
 msgid "The Howler"
@@ -641,31 +641,31 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:8
 msgid "The Crab"
-msgstr ""
+msgstr "A' Chrùbag"
 
 #: skycultures/arabic/constellation_names.eng.fab:9
 msgid "The Greater Dog"
-msgstr ""
+msgstr "An Cù Mòr"
 
 #: skycultures/arabic/constellation_names.eng.fab:10
 msgid "The Lesser Dog"
-msgstr ""
+msgstr "An Cù Beag"
 
 #: skycultures/arabic/constellation_names.eng.fab:11
 msgid "The Young Goat"
-msgstr ""
+msgstr "Am Meann"
 
 #: skycultures/arabic/constellation_names.eng.fab:12
 msgid "Who (Lady) Has Chair"
-msgstr ""
+msgstr "Ban-uasail le Cathair"
 
 #: skycultures/arabic/constellation_names.eng.fab:13
 msgid "Centaur"
-msgstr ""
+msgstr "Centaurus"
 
 #: skycultures/arabic/constellation_names.eng.fab:14
 msgid "Inflammatus"
-msgstr ""
+msgstr "Am Fear Laiste"
 
 #: skycultures/arabic/constellation_names.eng.fab:15
 #: skycultures/western/constellation_names.eng.fab:6
@@ -674,175 +674,175 @@ msgstr "A' Mhuc-mhara"
 
 #: skycultures/arabic/constellation_names.eng.fab:16
 msgid "Bristle"
-msgstr ""
+msgstr "Am Frioghan"
 
 #: skycultures/arabic/constellation_names.eng.fab:17
 msgid "The Southern Crown"
-msgstr ""
+msgstr "Crùn a Deas"
 
 #: skycultures/arabic/constellation_names.eng.fab:18
 msgid "The Northern Crown"
-msgstr ""
+msgstr "Crùn a Tuath"
 
 #: skycultures/arabic/constellation_names.eng.fab:19
 msgid "The Raven"
-msgstr ""
+msgstr "Am Fitheach"
 
 #: skycultures/arabic/constellation_names.eng.fab:20
 msgid "The Great Cup"
-msgstr ""
+msgstr "An Cupa Mòr"
 
 #: skycultures/arabic/constellation_names.eng.fab:21
 msgid "The Hen"
-msgstr ""
+msgstr "A' Chearc"
 
 #: skycultures/arabic/constellation_names.eng.fab:22
 msgid "The Dolphin"
-msgstr ""
+msgstr "An Leumadair-mara"
 
 #: skycultures/arabic/constellation_names.eng.fab:23
 msgid "The Dragon"
-msgstr ""
+msgstr "An Dràgon"
 
 #: skycultures/arabic/constellation_names.eng.fab:24
 msgid "Part of the Horse"
-msgstr ""
+msgstr "Pàirt dhe dh'Each"
 
 #: skycultures/arabic/constellation_names.eng.fab:25
 msgid "The River"
-msgstr ""
+msgstr "An Abhainn"
 
 #: skycultures/arabic/constellation_names.eng.fab:26
 msgid "The Twins"
-msgstr ""
+msgstr "Na Leth-aonan"
 
 #: skycultures/arabic/constellation_names.eng.fab:27
 msgid "The Kneeling (Man)"
-msgstr ""
+msgstr "Am Fear Sleuchdach"
 
 #: skycultures/arabic/constellation_names.eng.fab:28
 msgid "The Brave"
-msgstr ""
+msgstr "An Gaisgeach"
 
 #: skycultures/arabic/constellation_names.eng.fab:29
 msgid "The Lion"
-msgstr ""
+msgstr "An Leòmhann"
 
 #: skycultures/arabic/constellation_names.eng.fab:30
 msgid "The Hare"
-msgstr ""
+msgstr "A' Mhaigheach"
 
 #: skycultures/arabic/constellation_names.eng.fab:31
 msgid "The Balance"
-msgstr ""
+msgstr "A' Mheidh"
 
 #: skycultures/arabic/constellation_names.eng.fab:32
 msgid "The Turtle"
-msgstr ""
+msgstr "An Turtur"
 
 #: skycultures/arabic/constellation_names.eng.fab:33
 msgid "The Snake Charmer"
-msgstr ""
+msgstr "Geasadair na Nathrach"
 
 #: skycultures/arabic/constellation_names.eng.fab:34
 msgid "The Giant"
-msgstr ""
+msgstr "Am Famhair"
 
 #: skycultures/arabic/constellation_names.eng.fab:35
 msgid "The Great Horse"
-msgstr ""
+msgstr "An t-Each Mòr"
 
 #: skycultures/arabic/constellation_names.eng.fab:36
 msgid "Bearer of the Demon's Head"
-msgstr ""
+msgstr "Giùlanair Ceann an Deamhain"
 
 #: skycultures/arabic/constellation_names.eng.fab:37
 msgid "The Whale"
-msgstr ""
+msgstr "A' Mhuc-mhara"
 
 #: skycultures/arabic/constellation_names.eng.fab:38
 msgid "The Southern Whale"
-msgstr ""
+msgstr "A' Mhuc-mhara Dheasach"
 
 #: skycultures/arabic/constellation_names.eng.fab:39
 msgid "The Arrow"
-msgstr ""
+msgstr "An t-Saighead"
 
 #: skycultures/arabic/constellation_names.eng.fab:40
 msgid "The Archer"
-msgstr ""
+msgstr "Am Boghadair"
 
 #: skycultures/arabic/constellation_names.eng.fab:41
 msgid "The Scorpion"
-msgstr ""
+msgstr "Ab Sgairp"
 
 #: skycultures/arabic/constellation_names.eng.fab:42
 msgid "The Bull"
-msgstr ""
+msgstr "An Tarbh"
 
 #: skycultures/arabic/constellation_names.eng.fab:43
 msgid "The Triangle"
-msgstr ""
+msgstr "An Triantan"
 
 #: skycultures/arabic/constellation_names.eng.fab:44
 msgid "The Greater Bear"
-msgstr ""
+msgstr "Am Mathan Mòr"
 
 #: skycultures/arabic/constellation_names.eng.fab:45
 msgid "The Lesser Bear"
-msgstr ""
+msgstr "Am Mathan Beag"
 
 #: skycultures/arabic/constellation_names.eng.fab:46
 msgid "The Ship"
-msgstr ""
+msgstr "An Long"
 
 #: skycultures/arabic/constellation_names.eng.fab:47
 msgid "The Maiden"
-msgstr ""
+msgstr "A' Mhaighdinn"
 
 #: skycultures/arabic/constellation_names.eng.fab:48
 msgid "The Snake"
-msgstr ""
+msgstr "An Nathair"
 
 #: skycultures/arabic/constellation_names.eng.fab:49
 msgid "The Beast of Prey"
-msgstr ""
+msgstr "Am Biast"
 
 #: skycultures/arabic/star_names.fab:1
 msgid "Horse navel"
-msgstr ""
+msgstr "Imleag an Eich"
 
 #: skycultures/arabic/star_names.fab:2
 msgid "Tinted palm"
-msgstr ""
+msgstr "A' Bhas Dhathte"
 
 #: skycultures/arabic/star_names.fab:3
 msgid "Horse flank"
-msgstr ""
+msgstr "Cliathach an Eich"
 
 #: skycultures/arabic/star_names.fab:4
 msgid "The breast"
-msgstr ""
+msgstr "A' Chìoch"
 
 #: skycultures/arabic/star_names.fab:5
 msgid "The second frog"
-msgstr ""
+msgstr "An Dàrna Losgann"
 
 #: skycultures/arabic/star_names.fab:6
 msgid "The rope"
-msgstr ""
+msgstr "An Ròp"
 
 #: skycultures/arabic/star_names.fab:7
 msgid "The knee"
-msgstr ""
+msgstr "A' Ghlùn"
 
 #: skycultures/arabic/star_names.fab:8
 msgid "End of the river"
-msgstr ""
+msgstr "Ceann na h-Aibhne"
 
 #: skycultures/arabic/star_names.fab:9
 msgid "Belly of Cetus"
-msgstr ""
+msgstr "Brù Chetus"
 
 #: skycultures/arabic/star_names.fab:10
 msgid "The triangle - The first companionable"
