--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-20 16:43+0000\n"
+"PO-Revision-Date: 2013-03-21 12:42+0000\n"
 "Last-Translator: Pavol Gajdoš <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-21 04:36+0000\n"
+"X-Launchpad-Export-Date: 2013-03-22 04:34+0000\n"
 "X-Generator: Launchpad (build 16532)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -266,6 +266,9 @@ msgid ""
 "Henriksson in his article <em>Einstein's Theory of Relativity Confirmed by "
 "Ancient Solar Eclipses</em> (%1). See for more info %2here%3."
 msgstr ""
+"Táto historická rovnica bola získaná C. Schochom v roku 1931 a použitá G. "
+"Henrikssonom v jeho článku <em>Einsteinova teória relativity potvrdená "
+"pomocou starodávnych slnečných zatmení</em> (%1). Viac informácii %2tu%3."
 
 #: src/core/StelCore.cpp:1425
 #, qt-format
@@ -284,6 +287,9 @@ msgid ""
 "<em>Astronomical Formulae for Calculators</em>. It was also adopted in the "
 "PC program SunTracker Pro."
 msgstr ""
+"Tento vzťah je založený na štúdiu pozorovaní Slnka, Mesiaca a planét po roku "
+"1650 Spencerom Jonesom (%1) a použitý Jeanom Meeusom v jeho <em>Asronomické "
+"vzorce pre kalkulačky</em>. Bol využitý v PC programe SunTracker Pro."
 
 #: src/core/StelCore.cpp:1432
 msgid ""
@@ -291,6 +297,9 @@ msgid ""
 "adopted in the <em>Astronomical Ephemeris</em> and in the <em>Canon of Solar "
 "Eclipses</em> by Mucke & Meeus (1983)."
 msgstr ""
+"Toto je mierne modifikovaná verzia vzťahu IAU (1952), ktorý bol prijatý v "
+"<em>Astronomických efemeridoch</em> a v <em>Pravidlo zatmení Slnka</em> "
+"Mucke a Meeus (1983)."
 
 #: src/core/StelCore.cpp:1436
 msgid ""
@@ -331,6 +340,10 @@ msgid ""
 "<em>Polynomial approximations for the correction delta T E.T.-U.T. in the "
 "period 1800-1975</em> (%1) as fit through data published by Brouwer (1952)."
 msgstr ""
+"Táto rovnica 12-tého stupňa (zastaralá a nahradená Schmadelom a Zechom "
+"(1988)) bola publikovaná L. D. Schmadelom a G. Zechom v článku "
+"<em>Polynomické aproximácie pre korekciu delta T E.T.-U.T. v období 1800-"
+"1975</em> (%1) ako fitovanie cez dáta Brouwera (1952)."
 
 #: src/core/StelCore.cpp:1449
 msgid ""
@@ -383,6 +396,9 @@ msgid ""
 "Period 1800-1988</em> (%1) as data fit through values given by Stephenson & "
 "Morrison (1984)."
 msgstr ""
+"Táto rovnica 12-tého stupňa bola publikovaná L. D. Schmadelom a G. Zechom v "
+"článku <em>Empirické transformácie z U.T. do E.T. v období 1800-1988</em> "
+"(%1) ako fitovanie hodnôt od Stephensona a Morrisona (1984)."
 
 #: src/core/StelCore.cpp:1467
 msgid ""
@@ -419,6 +435,9 @@ msgid ""
 "used. Table for 1620..2000, and includes a variant of Chapront, Chapront-"
 "Touze & Francou (1997) for dates outside 1620..2000."
 msgstr ""
+"Z J. Meeus, <em>Astronomické algoritmy</em> (2. vydanie, 1998), a značne "
+"používaný. Tabuľka od 1600 do 2000 a zahŕňa variant Chapront, Chapront-Touze "
+"a Francou (1997) pre dátumy mimo 1620 do 2000."
 
 #: src/core/StelCore.cpp:1479
 #, qt-format
@@ -426,6 +445,8 @@ msgid ""
 "The JPL Solar System Dynamics Group of the NASA Jet Propulsion Laboratory "
 "use this formula in their interactive website %1JPL Horizons%2."
 msgstr ""
+"JPL Solar System Dynamics Group NASA Jet Propulsion Laboratory použila tento "
+"vzťah na ich interaktívnej webstránke %1JPL Horizons%2."
 
 #: src/core/StelCore.cpp:1482
 #, qt-format
@@ -433,6 +454,8 @@ msgid ""
 "This polynome was published by J. Meeus and L. Simons in article "
 "<em>Polynomial approximations to Delta T, 1620-2000 AD</em> (%1)."
 msgstr ""
+"Tento polynóm bol publikovaný J. Meeusom a L. Simonsom v článku "
+"<em>Polynomiálne aproximácie pre Delta T, 1620-2000 n.l.</em> (%1)."
 
 #: src/core/StelCore.cpp:1485
 msgid ""
@@ -440,6 +463,9 @@ msgid ""
 "Personal Computer</em> (2000) provides simple 3rd-order polynomial data fits "
 "for the recent past."
 msgstr ""
+"Štvrté vydanie O. Montenbruckovho a T. Pflegerovho <em>Astronómia na osobnom "
+"počítači</em> (2000) poskytuje jednoduchý kubický polynóm na fitovanie dát z "
+"nedávnej minulosti."
 
 #: src/core/StelCore.cpp:1488
 msgid ""
@@ -448,6 +474,10 @@ msgid ""
 "<em>Calendrical Tabulations</em> (2002). It is based on Jean Meeus' "
 "<em>Astronomical Algorithms</em> (1991)."
 msgstr ""
+"E. M. Reingold a N. Dershowitz prezentovali tento polynomický fit dát v "
+"<em>Kalendárnych výpočtoch</em> (3. vydanie 2007) a v ich <em>Zostavovaní "
+"kalendárnych tabuliek</em> (2002). Je založený na <em>Astronomických "
+"algoritmoch</em> (1991) Jeana Meeusa."
 
 #: src/core/StelCore.cpp:1491
 #, qt-format
@@ -456,6 +486,9 @@ msgid ""
 "in article <em>Historical values of the Earth's clock error %1T and the "
 "calculation of eclipses</em> (%2) with addendum in (%3)."
 msgstr ""
+"Toto dôležité riešenie bolo publikované L. V. Morrisonom a F. R. "
+"Stephensonom v článku <em>Historické hodnoty chyby zemských hodín %1T a "
+"výpočet zatmení</em> (%2) s dodatkom v (%3)."
 
 #: src/core/StelCore.cpp:1494
 #, qt-format
@@ -479,6 +512,10 @@ msgid ""
 "Solar Eclipses: -1900 to +3000</em> (2006). This formula is also used in the "
 "solar, lunar and planetary ephemeris program SOLEX."
 msgstr ""
+"Toto riešenie F. Espenaka a J. Meeusa založené na Morrison & Stephenson "
+"(2004) a polynomiálnom fitovaní cez tabuľkové hodnoty od 1600 do 2000 je "
+"použité pre %1NASA Eclipse Web Site%2 a v ich <em>Päťtisícročnom pravidle "
+"solárnych zatmení: -1900 do +3000</em>"
 
 #: src/core/StelCore.cpp:1497
 msgid "Used by default."
@@ -490,6 +527,8 @@ msgid ""
 "This is a quadratic formula for calculation of %1T with coefficients defined "
 "by the user."
 msgstr ""
+"To je kvadratická rovnica pre výpočet %1T s koeficientami definovanými "
+"užívateľom."
 
 #: src/core/StelCore.cpp:1503 src/core/SimbadSearcher.cpp:132
 msgid "Error"
@@ -497,21 +536,23 @@ msgstr "Chyba"
 
 #: src/core/StelCore.cpp:1552
 msgid "with meaningless values outside this range"
-msgstr ""
+msgstr "s nezmyselnou hodnotou mimo rozsahu"
 
 #: src/core/StelCore.cpp:1578
 msgid ""
 "with a mean error of less than one second, max. error 1.9s, and meaningless "
 "values outside this range"
 msgstr ""
+"so strednou chybou menšou ako 1 sekunda, max. chyba 1,9 s, a nezmyselná "
+"hodnota mimo rozsahu"
 
 #: src/core/StelCore.cpp:1602 src/core/StelCore.cpp:1607
 msgid "with zero values outside this range"
-msgstr ""
+msgstr "s nulovou hodnotou mimo rozsahu"
 
 #: src/core/StelCore.cpp:1612
 msgid "with a typical 1-second accuracy and zero values outside this range"
-msgstr ""
+msgstr "s typickou presnosťou 1 sekunda a nulová hodnota mimo rozsahu"
 
 #: src/core/StelCore.cpp:1639
 #, qt-format
@@ -644,7 +685,7 @@ msgstr "Rektascenzia/deklinácia (k dátumu): %1/%2"
 #: src/core/StelObject.cpp:111
 #, qt-format
 msgid "Galactic longitude/latitude: %1/%2"
-msgstr ""
+msgstr "Galaktická dĺžka/šírka: %1/%2"
 
 #: src/core/StelObject.cpp:121 src/core/StelObject.cpp:124
 #: src/core/StelObject.cpp:127
@@ -869,7 +910,7 @@ msgstr "Stephenson (1997)"
 
 #: src/gui/ConfigurationDialog.cpp:1150
 msgid "Meeus (1998) (with Chapront, Chapront-Touze & Francou (1997))"
-msgstr ""
+msgstr "Meeus (1998) (s Chapront, Chapront-Touze a Francou (1997))"
 
 #: src/gui/ConfigurationDialog.cpp:1151
 msgid "JPL Horizons"
@@ -885,7 +926,7 @@ msgstr "Montenbruck a Pfleger (2000)"
 
 #: src/gui/ConfigurationDialog.cpp:1154
 msgid "Reingold & Dershowitz (2002, 2007)"
-msgstr ""
+msgstr "Reingold a Dershowitz (2002, 2007)"
 
 #: src/gui/ConfigurationDialog.cpp:1155
 msgid "Morrison & Stephenson (2004, 2005)"
@@ -1719,7 +1760,7 @@ msgstr "Tupi-Guarani"
 
 #: src/translations.h:178
 msgid "Tongan"
-msgstr ""
+msgstr "Tongan"
 
 #: src/translations.h:179
 msgid "Western"
@@ -3793,27 +3834,27 @@ msgstr "Meteory"
 
 #: src/ui_viewDialog.h:1224
 msgid "Hourly zenith rate"
-msgstr ""
+msgstr "Hodinová zenitová rýchlosť"
 
 #: src/ui_viewDialog.h:1226
 msgid "ZHR:"
-msgstr ""
+msgstr "ZHR:"
 
 #: src/ui_viewDialog.h:1229
 msgid "Limit Magnitudes (for unaided/binocular observers)"
-msgstr ""
+msgstr "Limitná magnitúda (pre voľné oko/binokulár)"
 
 #: src/ui_viewDialog.h:1231
 msgid "Limit Magnitudes"
-msgstr ""
+msgstr "Limitná magnitúda"
 
 #: src/ui_viewDialog.h:1233
 msgid "Stars to magnitude"
-msgstr ""
+msgstr "Hviezdy do magnitúdy"
 
 #: src/ui_viewDialog.h:1237
 msgid "Nebulas to magitude"
-msgstr ""
+msgstr "Hmloviny do magnitúdy"
 
 #: src/ui_viewDialog.h:1240
 msgid "Constellations"
@@ -4575,17 +4616,17 @@ msgstr "Okulár aFOV: %1"
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:598
 #, qt-format
 msgid "Lens #%1"
-msgstr ""
+msgstr "Šošovky #%1"
 
 #: plugins/Oculars/src/Oculars.cpp:1563
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:602
 #, qt-format
 msgid "Lens #%1: %2"
-msgstr ""
+msgstr "Šošovky #%1: %2"
 
 #: plugins/Oculars/src/Oculars.cpp:1568
 msgid "Lens: none"
-msgstr ""
+msgstr "Šošovky: žiadne"
 
 #: plugins/Oculars/src/Oculars.cpp:1578 plugins/Oculars/src/Oculars.cpp:1635
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:753
@@ -4636,11 +4677,11 @@ msgstr "Š&ošovka"
 
 #: plugins/Oculars/src/Oculars.cpp:1841
 msgid "&Previous lens"
-msgstr ""
+msgstr "&Predchádzajúca šošovka"
 
 #: plugins/Oculars/src/Oculars.cpp:1842
 msgid "&Next lens"
-msgstr ""
+msgstr "&Nasledujúca šošovka"
 
 #: plugins/Oculars/src/Oculars.cpp:1872
 msgid "&Telescope"
@@ -4664,11 +4705,11 @@ msgstr "Ďalší okulár"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:207
 msgid "Previous lens"
-msgstr ""
+msgstr "Predchádzajúca šošovka"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:213
 msgid "Next lens"
-msgstr ""
+msgstr "Nasledujúca šošovka"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:219
 msgid "Previous CCD frame"
@@ -4729,7 +4770,7 @@ msgstr "Násobnosť: %1"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:609
 msgid "Lens: None"
-msgstr ""
+msgstr "Šošovka: žiadna"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:610
 msgid "Multiplicity: N/A"
@@ -4737,7 +4778,7 @@ msgstr "Násobnosť: N/A"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:614
 msgid "Multiplicity of lens"
-msgstr ""
+msgstr "Násobnosť šošovky"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:706
 #, qt-format
@@ -4754,12 +4795,13 @@ msgstr "Aktuálne zorné pole týchto binokulárov"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:825
 msgid "Magnification provided by this ocular/lens/telescope combination"
-msgstr ""
+msgstr "Zväčšenie poskytnuté touto kombináciou okulára/šošovky/teleskopu"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:826
 msgid ""
 "Actual field of view provided by this ocular/lens/telescope combination"
 msgstr ""
+"Aktuálne zorné pole poskytnuté touto kombináciou okulára/šošovky/teleskopu"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:489
 msgid "Oculars Plug-in"
@@ -4939,13 +4981,15 @@ msgstr "Šošovky"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplicity:"
-msgstr ""
+msgstr "Násobnosť:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
 "Values of multiplicity >1 expand the focal length (Barlow lens). Values of "
 "multiplicity <1 reduce the focal length (Shapley lens)."
 msgstr ""
+"Hodnoty násobnosti >1 predĺžujú ohniskovú vzdialenosť (Barlowova šošovka). "
+"Hodnoty násobnosti <1 zmenšujú ohniskovú vzdialenosť (Shapleyova šošovka)."
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1046
 #: plugins/Oculars/src/ui_ocularDialog.h:1056
@@ -7097,27 +7141,27 @@ msgstr ""
 #. TRANSLATORS: Full phrase: Exoplanet detected by transit
 #: plugins/Exoplanets/src/Exoplanet.cpp:172
 msgid "by transit"
-msgstr ""
+msgstr "pomocou tranzitu"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by radial velocity
 #: plugins/Exoplanets/src/Exoplanet.cpp:174
 msgid "by radial velocity"
-msgstr ""
+msgstr "pomocou radiálnych rýchlostí"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by imaging
 #: plugins/Exoplanets/src/Exoplanet.cpp:176
 msgid "by imaging"
-msgstr ""
+msgstr "priamo"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by astrometry
 #: plugins/Exoplanets/src/Exoplanet.cpp:179
 msgid "by astrometry"
-msgstr ""
+msgstr "astrometricky"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by microlensing
 #: plugins/Exoplanets/src/Exoplanet.cpp:181
 msgid "by microlensing"
-msgstr ""
+msgstr "mikrogravitačnou šošovkou"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:221
 msgid "Metallicity"
@@ -7182,7 +7226,7 @@ msgstr "Rok objavenia"
 #. TRANSLATORS: Exoplanet detected
 #: plugins/Exoplanets/src/Exoplanet.cpp:250
 msgid "Detected"
-msgstr ""
+msgstr "Detekovaná"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:110
 msgid "Exoplanets Plug-in"
